--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="full-reset container-menu-movile custom-scroll-containers">
             <div class="full-reset all-tittles">
                 <i class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;"></i> 
-                <div class="biblioteca">
+                <div class="biblioteca">x
                 <center>biblioteca</center>
              </div>
             </div>
@@ -48,14 +48,14 @@
                     <li>
                         <div class="dropdown-menu-button"></i>&nbsp;&nbsp; Libros y catálogo  <img src="./assets/chevron-down.svg"></i></div>
                         <ul class="list-unstyled">
-                            <li><a href="#" onclick="cargarFormulario('container-princip')"></i>&nbsp;&nbsp; Libros</a></li>
-                            <li><a href=""></i>&nbsp;&nbsp; Catálogo</a></li>
+                            <li><a href="#" onclick="cargarFormulario('container-princip','libros.html')"></i>&nbsp;&nbsp; Libros</a></li>
+                            <li><a href="#" onclick="cargarFormulario('container-princip','catalago.html')"></i>&nbsp;&nbsp; Catálogo</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdown-menu-button"></i>&nbsp;&nbsp;Reservaciones  <img src="./assets/chevron-down.svg"></i></div>
                         <ul class="list-unstyled">
-                            <li><a href=""></i>&nbsp;&nbsp; Libros</a></li>
+                            
                             <li>
                                 <a href=""></i>&nbsp;&nbsp; Reservaciones <span class="label label-danger pull-right label-mhover"></span></a>
                             </li>
@@ -148,13 +148,7 @@ Nuestro Sistema está conformado por 35 unidades de información, que están ubi
             </div>
           </div>
         </div>
-        <footer class="footer full-reset">
-            <div class="container-fluid">
-                <div class="row">
 
-                </div>
-            </div>           
-        </footer>
     </div>
 
 
