se agregaron nuevos formularios
se hicieron cambios en donde se agrego el formulario de las reservas

--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                     <li>
                         <div class="dropdown-menu-button"></i>&nbsp;&nbsp;Reservaciones  <img src="./assets/chevron-down.svg"></i></div>
                         <ul class="list-unstyled">
-                            
-                            <li>
-                                <a href=""></i>&nbsp;&nbsp; Reservaciones <span class="label label-danger pull-right label-mhover"></span></a>
-                            </li>
+                            <li><a href="#" onclick="cargarFormulario('container-princip','reserva.html')"></i>&nbsp;&nbsp; Reserva</a></li>
                         </ul>
                     </li>
                     <li><a href=""></i>&nbsp;&nbsp; Editorial de libros</a></li>
