--- a/libros.html
+++ b/libros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/libros.css">
+    <script src="js/functions.js"></script>
     <title>Agregar Libros</title>
 </head>
 <body>
@@ -68,7 +69,7 @@
           <footer>
             <div class='set'>
               <button id='back'>Back</button>
-              <button id='save'>Guardar</button>
+              <button id='save' onclick="registroLibro()">Guardar</button>
             </div>
           </footer>
         </div>
