--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
-    <title>Document</title>
+    <title>Inicio de sesion</title>
 </head>
 <body>
     <div class="login-wrap">
@@ -15,23 +15,17 @@
             <div class="sign-in-htm">
               <div class="group">
                 <label for="user" class="label">Username</label>
-                <input id="user" type="text" class="input">
+                <input  id="user" type="text" class="input">
               </div>
               <div class="group">
                 <label for="pass" class="label">Password</label>
                 <input id="pass" type="password" class="input" data-type="password">
               </div>
-              <div class="group">
-                <input id="check" type="checkbox" class="check" checked>
-                <label for="check"><span class="icon"></span> Keep me Signed in</label>
-              </div>
+
               <div class="group">
                 <input type="submit" class="button" value="Sign In">
               </div>
               <div class="hr"></div>
-              <div class="foot-lnk">
-                <a href="#forgot">Forgot Password?</a>
-              </div>
             </div>
             <div class="sign-up-htm">
               <div class="group">
@@ -54,9 +48,7 @@
                 <input type="submit" class="button" value="Sign Up">
               </div>
               <div class="hr"></div>
-              <div class="foot-lnk">
-                <label for="tab-1">Already Member?</a>
-              </div>
+
             </div>
           </div>
         </div>
