--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <li><a href="#" onclick="cargarFormulario('container-princip','reserva.html')"></i>&nbsp;&nbsp; Reserva</a></li>
                         </ul>
                     </li>
-                    <li><a href=""></i>&nbsp;&nbsp; Editorial de libros</a></li>
+                    <li><a href=""></i>&nbsp;&nbsp; Historial de reservas</a></li>
                 </ul>
             </div>
         </div>
@@ -74,12 +74,8 @@
                 <li style="color:#fff; cursor:default;">
                     <span class="all-tittles"></span>
                 </li>
-                <li  class="tooltips-general exit-system-button" data-href="index.php" data-placement="bottom" title="Salir del sistema">
-                    <i class="zmdi zmdi-power"></i>
-                </li>
-                <li  class="tooltips-general btn-help" data-placement="bottom" title="Ayuda">
-                    <i class="zmdi zmdi-help-outline zmdi-hc-fw"></i>
-                </li>
+
+
                 <li class="mobile-menu-button visible-xs" style="float: left !important;">
                     <i class="zmdi zmdi-menu"></i>
                 </li>
@@ -97,7 +93,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                     <font class="all-tittles" ><center>CATÁLOGO EN LÍNEA</center></font><br>
-En nuestro catálogo en línea usted podrá consultar todas las colecciones bibliográficas ofrecidas en las instalaciones de la Biblioteca en sus dos sedes, al igual que los trabajos de grado en formato digital. También podrá hacer la reserva del material que tenga prestado.
+
                 </div>
             </div>
             <br>
@@ -107,7 +103,7 @@ En nuestro catálogo en línea usted podrá consultar todas las colecciones bibl
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                     <font class="all-tittles" ><center>LIBROS EN SU CASA</center></font><br>
-Es un servicio único en el país en cuanto a cooperación bibliotecaria universitaria. Mediante él, los usuarios de las bibliotecas de las instituciones adscritas al grupo G8 biblioteca solicitan desde su domicilio (trabajo, hogar u oficina), el préstamo o la devolución del material bibliográfico.
+
                 </div>
             </div>
             <br>
@@ -117,7 +113,7 @@ Es un servicio único en el país en cuanto a cooperación bibliotecaria univers
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                     <font class="all-tittles" ><center>BIBLIOTECAS</center></font><br>
-Nuestro Sistema está conformado por 35 unidades de información, que están ubicadas en puntos estratégicos de 16 comunas y 5 corregimientos de la ciudad. Nuestras bibliotecas, en sus diferentes tipologías, no solo  son espacios para la consulta de información en diferentes formatos, de igual forma, son lugares acogedores e incluyentes, que ofrecen información pertinente, formación para el desarrollo humano integral y oportunidades para el encuentro y la construcción colectiva. Lo que las convierte en centros de desarrollo comunitario y local.
+
                 </div>
             </div>
         </div>
