--- a/historial.html
+++ b/historial.html
@@ -14,29 +14,10 @@
 
 <h2>Historial de Libros Reservados</h2>
 <section  class="ftco-section">
-  <div class="container">
+  <div class="container" id = "historial">
     <div class="row justify-content-center">
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="table-wrap">
-          <table class="table">
-            <thead class="thead-dark">
-              <tr>
-                <th>Libro</th>
-                <th>Autor</th>
-                <th>Editorial</th>
-                <th>Fecha de reserva</th>
-                <th>Usuario</th>
-              </tr>
-            </thead>
-            <tbody id="historialTablaBody">
-              
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+    
   </div>
   
 </section>
