--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/main.js"></script>
     <script src="./js/functions.js"></script>
+    <link rel="stylesheet" href="./css/sweetalert2.min.css">
+    <script src="./js/sweetalert2.all.min.js"></script>
 
 
 
@@ -58,7 +60,7 @@
                             <li><a href="#" onclick="cargarFormulario('container-princip','reserva.html')"></i>&nbsp;&nbsp; Reserva</a></li>
                         </ul>
                     </li>
-                    <li><a href=""></i>&nbsp;&nbsp; Historial de reservas</a></li>
+                    <li><a href="#" onclick="cargarFormulario('container-princip','historial.html')"></i>&nbsp;&nbsp; Historial de reservas</a></li>
                 </ul>
             </div>
         </div>
