--- a/libros.html
+++ b/libros.html
@@ -27,6 +27,12 @@
                 <input id='name-book' placeholder="Nombre del libro" type='text'>
               </div>
 
+              <div class='name-book'>
+                <label for='image-input'>Seleccionar Imagen</label>
+                <input id='image-input' type='file' accept='image/*'>
+                <button onclick="cargarImagen()">Cargar Imagen</button>
+              </div>
+
             </div>
             <div class='set'>
               <div class='book-author'>
