fin del proeyct

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="js/modernizr.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/sweetalert2.min.css">
+    <script src="./js/sweetalert2.all.min.js"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/main.js"></script>
     <script src="./js/functions.js"></script>
-    <link rel="stylesheet" href="./css/sweetalert2.min.css">
-    <script src="./js/sweetalert2.all.min.js"></script>
+
 
 
 
@@ -48,7 +49,7 @@
                 <ul class="list-unstyled">
                     <li><a href=""></i>&nbsp;&nbsp; Inicio</a></li>
                     <li>
-                        <div class="dropdown-menu-button"></i>&nbsp;&nbsp; Libros y catálogo  <img src="./assets/chevron-down.svg"></i></div>
+                        <div class="dropdown-menu-button" id="MenuLibros"></i>&nbsp;&nbsp; Libros y catálogo  <img src="./assets/chevron-down.svg"></i></div>
                         <ul class="list-unstyled">
                             <li><a href="#" onclick="cargarFormulario('container-princip','libros.html')"></i>&nbsp;&nbsp; Libros</a></li>
                             <li><a href="#" onclick="cargarFormulario('container-princip','catalago.html')"></i>&nbsp;&nbsp; Catálogo</a></li>
