--- a/login.html
+++ b/login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/sweetalert2.min.css">
+    <script src="./js/sweetalert2.all.min.js"></script>
     <script src="./js/functions.js"></script>
     <title>Inicio de sesion</title>
 </head>
@@ -45,6 +48,15 @@
                 <label for="pass" class="label">Email Address</label>
                 <input id="Email" type="text" class="input">
               </div>
+              
+              <div class="group">
+                <label for="dropdown" class="label">Seleccione Rol</label>
+                <select class="form-select" id="dropdown">
+                  <option value="1">Bibliotecario</option>
+                  <option value="2">Estandar</option>
+                </select>
+              </div>
+
               <div class="group">
                 <input onclick="registroUsuarios()" type="button" class="button" value="Sign Up">
               </div>
