--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                 <li style="color:#fff; cursor:default;">
                     <span class="all-tittles"></span>
                 </li>
+                
+                <li style="color:#fff;"><a style="color:#fff;" href="#" onclick="cerrarSesion()"></i>&nbsp;&nbsp;Cerrar Sesion</a></li>
 
                 <li class="mobile-menu-button visible-xs" style="float: left !important;">
                     <i class="zmdi zmdi-menu"></i>
